# Pilot-Readiness-AI-Framework

./: .dockerignore  .gitignore  Dockerfile  README.md  README_threshold_update.txt  config.py  default_config.yaml  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  requirements-docker.txt  requirements.txt  streaming_demo.py
.github/workflows/: ci.yml
docs/: api_reference.md  custom_plugins.md  getting_started.md
output/: dashboard.html
output/edge/: stress_classifier.c  stress_classifier_pure.py
output/features/: performance_features.csv  wesad_features.csv
output/models/: performance_model.pkl  stress_classifier.pkl
src/: __init__.py  cli.py
src/api/: rest_api.py
src/core/: __init__.py  alerts.py  base.py  calibration.py  config_schema.py  framework.py  live_pipeline.py  registry.py  signal_quality.py
src/data/: matb_parser.py  matb_simulator.py  preprocessing.py  swell_loader.py  wesad_loader.py
src/edge/: __init__.py  export_model.py  onnx_export.py
src/experiments/: cross_dataset.py  model_comparison.py
src/features/: feature_pipeline.py  hrv_features.py  performance_features.py
src/models/: __init__.py  performance_model.py  stress_classifier.py
src/plugins/: __init__.py
src/plugins/extractors/: __init__.py  fatigue_extractor.py  hrv_extractor.py  performance_extractor.py
src/plugins/fusion/: __init__.py  bayesian_fusion.py  weighted_fusion.py
src/plugins/models/: __init__.py  lightgbm_model.py
src/plugins/sensors/: __init__.py  matb_sensor.py  swell_sensor.py  wesad_sensor.py
src/plugins/threshold/: __init__.py  neyman_pearson.py
src/risk/: __init__.py  fusion.py  threshold.py
src/visualization/: __init__.py  dashboard.py  plots.py
templates/: streaming.html
tests/: test_edge_export.py  test_framework.py  test_fusion_threshold.py  test_hrv_features.py  test_integration.py  test_performance_features.py  test_preprocessing.py  test_swell_loader.py
